--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li> <a href="#">Home</a></li>
                 <li> <a href="#">About Us</a></li>
-                <li> <a href="#">Contact Us</a></li>
+                <li> <a id="logout" href="" onclick="doLogout(event)">Logout</a></li>
             </ul>
             </nav>
             </header>
@@ -40,13 +40,19 @@
                 <ul>
                     <li> <a href="#">Home</a></li>
                     <li> <a href="#">About Us</a></li>
-                    <li> <a href="#">Contact Us</a></li>
+                    <li> <a id="logout" href="" onclick="doLogout(event)">Logout</a></li>
                 </ul>
                 </nav>
             
         </footer></div>
     </body>
-    <script src="./src/auth.service.js"></script>
+
+
+    <script src="./src/api.config.js"></script>
+    <script src="./src/simple-storage.js"></script>
     <script src="./src/service-helpers.js"></script>
+    <script src="./src/auth.service.js"></script>
     <script src="./src/app.js"></script>
     </html>
+
+    
