--- a/public/home.html
+++ b/public/home.html
@@ -35,14 +35,16 @@
                 </nav>
             
         </footer>
+    <script src="./src/api.config.js"></script>
+    <script src="./src/simple-storage.js"></script>
+    <script src="./src/route-guard.js"></script>
+    <script src="./src/service-helpers.js"></script>
+    <script src="./src/auth.service.js"></script>
+    <script src="./src/reservation.service.js"></script>
+    <script src="./src/build-reservation-table.js"></script>
+    <script src="./src/add-reservation.js"></script>
+    <script src="./src/auth.js"></script>
 
-        <script src="./src/api.config.js"></script>
-        <script src="./src/simple-storage.js"></script>
-        <script src="./src/service-helpers.js"></script>
-        <script src="./src/auth.service.js"></script>
-        <script src="./src/reservation.service.js"></script>
-        <script src="./src/route-guard.js"></script>
-        <script src="./src/build-reservation-table.js"></script>
-        <script src="./src/app.js"></script>
+      
     </body>
 </html>
