--- a/public/index.html
+++ b/public/index.html
@@ -47,12 +47,12 @@
         </footer></div>
     </body>
 
-
     <script src="./src/api.config.js"></script>
     <script src="./src/simple-storage.js"></script>
     <script src="./src/service-helpers.js"></script>
     <script src="./src/auth.service.js"></script>
-    <script src="./src/app.js"></script>
+    <script src="./src/auth.js"></script>
+
     </html>
 
     
